--- a/core/templates/core/note_list.html
+++ b/core/templates/core/note_list.html
@@ -21,23 +21,18 @@
         <table class="table table-striped table-hover">
             <thead class="thead-inverse">
                 <tr>
+                    <th>{% trans "Actions" %}</th>
                     <th>{% trans "Time" %}</th>
                     {% if not unique_child %}
                         <th>{% trans "Child" %}</th>
                     {% endif %}
                     <th>{% trans "Note" %}</th>
-                    <th class="text-center">{% trans "Actions" %}</th>
                 </tr>
             </thead>
             <tbody>
                 {% for note in object_list %}
                     <tr>
-                        <th scope="row">{{ note.time|datetime_short }}</th>
-                        {% if not unique_child %}
-                            <td><a href="{% url 'core:child' note.child.slug %}">{{ note.child }}</a></td>
-                        {% endif %}
-                        <td>{{ note.note }}</td>
-                        <td class="text-center">
+                        <td>
                             <div class="btn-group btn-group-sm" role="group" aria-label="{% trans "Actions" %}">
 
                                 {% if perms.core.change_note %}
@@ -54,6 +49,11 @@
 
                             </div>
                         </td>
+                        <th scope="row">{{ note.time|datetime_short }}</th>
+                        {% if not unique_child %}
+                            <td><a href="{% url 'core:child' note.child.slug %}">{{ note.child }}</a></td>
+                        {% endif %}
+                        <td>{{ note.note }}</td>
                     </tr>
                 {% empty %}
                     <tr>
