--- a/core/templates/core/tummytime_list.html
+++ b/core/templates/core/tummytime_list.html
@@ -20,6 +20,7 @@
         <table class="table table-striped table-hover">
             <thead class="thead-inverse">
                 <tr>
+                    <th>{% trans "Actions" %}</th>
                     <th>{% trans "Start" %}</th>
                     <th>{% trans "End" %}</th>
                     {% if not unique_child %}
@@ -27,20 +28,12 @@
                     {% endif %}
                     <th>{% trans "Duration" %}</th>
                     <th>{% trans "Milestone" %}</th>
-                    <th class="text-center">{% trans "Actions" %}</th>
                 </tr>
             </thead>
             <tbody>
                 {% for tummytime in object_list %}
                     <tr>
-                        <th scope="row">{{ tummytime.start|datetime_short }}</th>
-                        <td>{{ tummytime.end|datetime_short }}</td>
-                        {% if not unique_child %}
-                            <td><a href="{% url 'core:child' tummytime.child.slug %}">{{ tummytime.child }}</a></td>
-                        {% endif %}
-                        <td>{{ tummytime.duration|duration_string }}</td>
-                        <td>{{ tummytime.milestone }}</td>
-                        <td class="text-center">
+                        <td>
                             <div class="btn-group btn-group-sm" role="group" aria-label="{% trans "Actions" %}">
 
                                 {% if perms.core.change_tummytime %}
@@ -57,6 +50,13 @@
 
                             </div>
                         </td>
+                        <th scope="row">{{ tummytime.start|datetime_short }}</th>
+                        <td>{{ tummytime.end|datetime_short }}</td>
+                        {% if not unique_child %}
+                            <td><a href="{% url 'core:child' tummytime.child.slug %}">{{ tummytime.child }}</a></td>
+                        {% endif %}
+                        <td>{{ tummytime.duration|duration_string }}</td>
+                        <td>{{ tummytime.milestone }}</td>
                     </tr>
                 {% empty %}
                     <tr>
