--- a/core/templates/core/weight_list.html
+++ b/core/templates/core/weight_list.html
@@ -21,24 +21,19 @@
         <table class="table table-instances">
             <thead class="thead-inverse">
                 <tr>
+                    <th>{% trans "Actions" %}</th>
                     <th>{% trans "Date" %}</th>
                     {% if not unique_child %}
                         <th>{% trans "Child" %}</th>
                     {% endif %}
                     <th>{% trans "Weight" %}</th>
-                    <th class="text-center">{% trans "Actions" %}</th>
                 </tr>
             </thead>
             <tbody>
                 {% for weight in object_list %}
                     {% cycle "odd" "even" as row_class silent %}
                     <tr class="{{ row_class }}">
-                        <th scope="row">{{ weight.date }}</th>
-                        {% if not unique_child %}
-                            <td><a href="{% url 'core:child' weight.child.slug %}">{{ weight.child }}</a></td>
-                        {% endif %}
-                        <td>{{ weight.weight }}</td>
-                        <td class="text-center">
+                        <td>
                             <div class="btn-group btn-group-sm" role="group" aria-label="{% trans "Actions" %}">
 
                                 {% if perms.core.change_weight %}
@@ -55,6 +50,11 @@
 
                             </div>
                         </td>
+                        <th scope="row">{{ weight.date }}</th>
+                        {% if not unique_child %}
+                            <td><a href="{% url 'core:child' weight.child.slug %}">{{ weight.child }}</a></td>
+                        {% endif %}
+                        <td>{{ weight.weight }}</td>
                     </tr>
                     {% if weight.notes %}
                         <tr class="{{ row_class }} row-details">
