--- a/dashboard/templates/cards/sleep_last.html
+++ b/dashboard/templates/cards/sleep_last.html
@@ -1,7 +1,11 @@
 {% extends 'cards/base.html' %}
 {% load duration i18n %}
 
-{% block header %}{% trans "Last Sleep" %}{% endblock %}
+{% block header %}
+    <a href="{% url "core:sleep-list" %}">
+        {% trans "Last Sleep" %}
+    </a>
+{% endblock %}
 
 {% block title %}
     {% if sleep %}
