--- a/dashboard/templates/cards/diaperchange_last.html
+++ b/dashboard/templates/cards/diaperchange_last.html
@@ -1,7 +1,11 @@
 {% extends 'cards/base.html' %}
 {% load i18n %}
 
-{% block header %}{% trans "Last Diaper Change" %}{% endblock %}
+{% block header %}
+    <a href="{% url "core:diaperchange-list" %}">
+        {% trans "Last Diaper Change" %}
+    </a>
+{% endblock %}
 
 {% block title %}
     {% if change %}
