--- a/dashboard/templates/cards/diaperchange_types.html
+++ b/dashboard/templates/cards/diaperchange_types.html
@@ -1,7 +1,11 @@
 {% extends 'cards/base.html' %}
 {% load i18n %}
 
-{% block header %}{% trans "Diaper Changes" %}{% endblock %}
+{% block header %}
+    <a href="{% url "core:diaperchange-list" %}">
+        {% trans "Diaper Changes" %}
+    </a>
+{% endblock %}
 
 {% block title %}
     {% if total == 0 %}
