--- a/dashboard/templates/cards/feeding_last_method.html
+++ b/dashboard/templates/cards/feeding_last_method.html
@@ -1,7 +1,11 @@
 {% extends 'cards/base.html' %}
 {% load i18n %}
 
-{% block header %}{% trans "Last Feeding Method" %}{% endblock %}
+{% block header %}
+    <a href="{% url "core:feeding-list" %}">
+        {% trans "Last Feeding Method" %}
+    </a>
+{% endblock %}
 
 {% block title %}
     {% if feedings|length > 0 %}
