--- a/dashboard/templates/cards/timer_list.html
+++ b/dashboard/templates/cards/timer_list.html
@@ -1,7 +1,11 @@
 {% extends 'cards/base.html' %}
 {% load i18n %}
 
-{% block header %}{% trans "Active Timers" %}{% endblock %}
+{% block header %}
+    <a href="{% url "core:timer-list" %}">
+        {% trans "Active Timers" %}
+    </a>
+{% endblock %}
 
 {% block title %}
     {% with instances|length as count %}
