--- a/dashboard/templates/cards/tummytime_day.html
+++ b/dashboard/templates/cards/tummytime_day.html
@@ -1,7 +1,11 @@
 {% extends 'cards/base.html' %}
 {% load duration i18n %}
 
-{% block header %}{% trans "Today's Tummy Time" %}{% endblock %}
+{% block header %}
+    <a href="{% url "core:tummytime-list" %}">
+        {% trans "Today's Tummy Time" %}
+    </a>
+{% endblock %}
 
 {% block title %}
     {% if stats.count > 0 %}
