Add "time since previous" to feedings in timeline
Fixes #266

--- a/core/templates/core/child_detail.html
+++ b/core/templates/core/child_detail.html
@@ -67,6 +67,11 @@
                                             <small>Duration: {{ object.duration }}</small>
                                         </div>
                                     {% endif %}
+                                    {% if object.time_since_prev %}
+                                        <div>
+                                            <small>{{ object.time_since_prev }} since previous</small>
+                                        </div>
+                                    {% endif %}
                                     {% if object.edit_link %}
                                         <div>
                                             <small><a href="{{ object.edit_link }}">Edit</a></small>
