Card linking to timeline from dashboard
Fixes #271

--- a/babybuddy/static_src/scss/icons.scss
+++ b/babybuddy/static_src/scss/icons.scss
@@ -100,6 +100,10 @@
     @extend .fa-thermometer-three-quarters;
 }
 
+.icon-timeline {
+    @extend .fa-history;
+}
+
 .icon-timer {
     @extend .fa-clock-o;
 }
