--- a/core/templates/core/child_detail.html
+++ b/core/templates/core/child_detail.html
@@ -82,6 +82,21 @@
                         </li>
                     {% endfor %}
                 </ul>
+                <h3 class="text-center">
+                    {% if date_previous %}
+                        <a class="btn btn-sm btn-default" href="?date={{ date_previous|date:"Y-m-d" }}" aria-label="{% trans "Previous" %}">
+                            <i class="icon icon-chevron-left" aria-hidden="true"></i>
+                            <span class="sr-only">{% trans "Previous" %}</span>
+                        </a>
+                    {% endif %}
+                    {{ date|date }}
+                    {% if date_next %}
+                        <a class="btn btn-sm btn-default" href="?date={{ date_next|date:"Y-m-d" }}" aria-label="{% trans "Next" %}">
+                            <i class="icon icon-chevron-right" aria-hidden="true"></i>
+                            <span class="sr-only">{% trans "Next" %}</span>
+                        </a>
+                    {% endif %}
+                </h3>
             {% else %}
                 <div class="text-center">No events</div>
             {% endif %}
