--- a/core/templates/timeline/timeline.html
+++ b/core/templates/timeline/timeline.html
@@ -8,5 +8,9 @@
 {% endblock %}
 
 {% block content %}
-    {# TODO! #}
+    <div class="row">
+        <div class="col">
+            {% include 'timeline/_timeline.html' %}
+        </div>
+    </div>
 {% endblock %}
