Add "timeline" button to child button group

--- a/dashboard/static_src/scss/dashboard.scss
+++ b/dashboard/static_src/scss/dashboard.scss
@@ -1,3 +1,7 @@
+.child-actions {
+    flex-wrap: wrap;
+}
+
 @include media-breakpoint-between(sm, md) {
     #dashboard-child {
         &.card-columns {
