--- a/static/babybuddy/css/app.css
+++ b/static/babybuddy/css/app.css
@@ -13801,6 +13801,10 @@ h3 {
   padding: 0;
 }
 
+.child-actions {
+  flex-wrap: wrap;
+}
+
 @media (min-width: 576px) and (max-width: 991.98px) {
   #dashboard-child.card-columns {
     column-count: 2;
