--- a/babybuddy/static_src/scss/babybuddy.scss
+++ b/babybuddy/static_src/scss/babybuddy.scss
@@ -5,3 +5,4 @@
 @import '../../../node_modules/tempusdominus-bootstrap-4/src/sass/tempusdominus-bootstrap-4';
 
 @import '../../../**/static_src/scss/*';
+@import '../fontello/css/babybuddy';
